replace depr cotrs with valueOf()